[tool.poetry]
name = "convert_bills"
version = "0.1.0"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]

[tool.poetry.dependencies]
python = "^3.7"
opencivicdata = "^2.4"
dj-database-url = "^0.5.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
